--- a/Project.GongBang/css/agent.css
+++ b/Project.GongBang/css/agent.css
@@ -119,7 +119,6 @@ h1 {
 
 .navbar {
     width: 100%;
-    position: fixed;
     top: 0;
     z-index: 1000;
 }
@@ -146,4 +145,11 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.contact-info p {
+    font-size: 20px;
+    margin-top: 5px;
+    margin-left: 20px;
+    display: inline;
 }
