--- a/Project.GongBang/css/main.css
+++ b/Project.GongBang/css/main.css
@@ -6,7 +6,6 @@ body {
 }
 
 .container {
-    /* 폰트 지정 */
     font-family: "Dongle", sans-serif;
     font-size: 40px;
     font-weight: 400;
@@ -14,7 +13,7 @@ body {
     max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8); /* Make the background slightly transparent */
+    background-color: rgba(255, 255, 255, 0.8); 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -70,13 +69,21 @@ body {
 u, a {
     text-decoration: none;
 }
-
 #first_box_img {
-    text-align: center;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
     margin: 20px 0;
-    background-color: rgba(255, 255, 255, 0.8); /* 배경을 약간 투명하게 설정 */
+    margin-left: -150px;
+    background-color: rgba(255, 255, 255, 0.8); 
     padding: 10px;
     border-radius: 10px;
+}
+
+.first_box_text {
+    font-family: 'Dongle', sans-serif; 
+    font-size: 80px; 
+    margin-left: 20px; 
 }
 
 .room-text {
